login/register page alignment corrected

--- a/Assets/CSS/loginregister.css
+++ b/Assets/CSS/loginregister.css
@@ -156,7 +156,7 @@ h2 {
     margin: auto;
     width: 50%;
     padding: 10px;
-    margin-bottom: 5px;
+    margin-bottom: 5%;
 }
 
 h1 {
@@ -242,13 +242,13 @@ input[type='radio'] {
 .container {
 	background-color: #fff;
 	border-radius: 10px;
-  	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
 			0 10px 10px rgba(0,0,0,0.22);
 	position: relative;
 	overflow: hidden;
-	width: 768px;
+	width: 800px;
 	max-width: 100%;
-	min-height: 480px;
+	min-height: 550px;
 }
 
 .form-container {
